# first_fastapi2

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  FINAL_TESTING_SOLUTION.md  README.md  TESTING_GUIDE.md  TEST_STATUS_REPORT.md  VERCEL_DEPLOYMENT.md  bank_account_example.py  create_tables.py  email_setup_guide.txt  inspect_db.py  main.py  pyproject.toml  requirements.txt  simple_class_example.py  test_todo_crud_detailed.py  vercel.json
.github/workflows/: product-result-cron.yml
app/: main.py
app/api/: __init__.py  email.py  image_analysis.py  playing_with_neon.py  population.py  products.py  profiles.py  strand.py  todos.py
app/api/basic/: cities.py  func.py
app/core/: config.py  database.py  logging_config.py
app/models/: __init__.py  image_analysis.py  playing_with_neon.py  product_result.py  products.py  profiles.py  todo.py
app/schemas/: __init__.py  image_analysis.py  playing_with_neon.py  product_result.py  products.py  profiles.py  todo.py
app/services/: azure_vision.py  email_service.py  image_processing.py
app/utils/: datetime_utils.py
data/: populatin.xlsx
docs/fast_api/: README.md  index.md
docs/fast_api/01_tutorial_basic/: 01_first_steps.md  02_path_parameters.md  03_query_parameters.md  04_request_body.md  05_query_params_validation.md  06_path_params_numeric_validation.md  07_body_multiple_parameters.md  08_body_fields.md  09_body_nested_models.md  10_schema_extra_example.md  11_extra_data_types.md  12_response_model.md  13_cookie_parameters.md  14_header_parameters.md
docs/source/: conf.py
docs/strand_agents/: strand_agents_api_reference.md  strand_agents_examples.md  strand_agents_overview.md
tests/: conftest.py  test_api_simple.py  test_basic_examples.py  test_population_api.py  test_todo_api.py  test_working_solution.py
(+1 files in other folders)
